--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -2,6 +2,8 @@
 firstName=Nome
 lastName=Sobrenome
 enabled=Abilitado
+address=Enderço
 
 # Screen titles
-panelHeaderText=Noções básicas de vinculação de dados
+panel1HeaderText=Noções básicas de vinculação de dados
+panel2HeaderText=Detalhes do Endereço
