Passo 9 - Formatando valores

--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -7,3 +7,8 @@ address=Enderço
 # Screen titles
 panel1HeaderText=Noções básicas de vinculação de dados
 panel2HeaderText=Detalhes do Endereço
+
+# E-mail
+sendEmail=Enviar e-mail
+mailSubject=Oi {0}
+mailBody=Como você está?
