--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -7,3 +7,8 @@ address=Adresse
 # Screen titles
 panel1HeaderText=Data Binding Grundlagen
 panel2HeaderText=Adressdetails
+
+# Email
+sendEmail=Email versenden
+mailSubject=Hallo {0}
+mailBody=Wie geht es dir?
