Passo 10 - Formatação de propriedade usando tipos de dados

--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -3,6 +3,7 @@ firstName=Nome
 lastName=Sobrenome
 enabled=Abilitado
 address=Enderço
+salesAmount=Quantidade de vendas
 
 # Screen titles
 panel1HeaderText=Noções básicas de vinculação de dados
