--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,6 +3,7 @@ firstName=First Name
 lastName=Last Name
 enabled=enabled
 address=Address
+salesAmount=Sales Amount
 
 # Titulos de tela
 panel1HeaderText=Data Binding Basics
