--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -3,6 +3,7 @@ firstName=Vorname
 lastName=Nachname
 enabled=Aktiviert
 address=Adresse
+salesAmount=Verkaufsmenge
 
 # Screen titles
 panel1HeaderText=Data Binding Grundlagen
