Passo 12 - Associação de agregação usando modelos

--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -8,8 +8,13 @@ salesAmount=Quantidade de vendas
 # Screen titles
 panel1HeaderText=Noções básicas de vinculação de dados
 panel2HeaderText=Detalhes do Endereço
+panel3HeaderText=Associação de agregação
 
 # E-mail
 sendEmail=Enviar e-mail
 mailSubject=Oi {0}
 mailBody=Como você está?
+
+# Product list
+productListTitle=Lista de produtos
+StockValue=Valor Atual do Estoque
