--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -8,8 +8,13 @@ salesAmount=Sales Amount
 # Titulos de tela
 panel1HeaderText=Data Binding Basics
 panel2HeaderText=Address Details
+panel3HeaderText=Aggregation Binding
 
 # Email
 sendEmail=Send Email
 mailSubject=Hi {0}
 mailBody=How are you?
+
+# Product list
+productListTitle= Product List
+StockValue=Current Stock Value
