Passo 13 - Elemento de Ligação

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,6 +9,7 @@ salesAmount=Sales Amount
 panel1HeaderText=Data Binding Basics
 panel2HeaderText=Address Details
 panel3HeaderText=Aggregation Binding
+panel4HeaderText=Product Details
 
 # Email
 sendEmail=Send Email
@@ -18,3 +19,11 @@ mailBody=How are you?
 # Product list
 productListTitle= Product List
 StockValue=Current Stock Value
+
+# Product Details
+ProductID=Product ID
+ProductName=Product Name
+QuantityPerUnit=Quantity per Unit
+UnitPrice=Unit Price
+UnitsInStock=Number of Units in Stock
+Discontinued=Discontinued
