--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -9,6 +9,7 @@ salesAmount=Quantidade de vendas
 panel1HeaderText=Noções básicas de vinculação de dados
 panel2HeaderText=Detalhes do Endereço
 panel3HeaderText=Associação de agregação
+panel4HeaderText=Detalhes do produto
 
 # E-mail
 sendEmail=Enviar e-mail
@@ -18,3 +19,11 @@ mailBody=Como você está?
 # Product list
 productListTitle=Lista de produtos
 StockValue=Valor Atual do Estoque
+
+# Product Details
+ProductID=Product ID
+ProductName=Product Name
+QuantityPerUnit=Quantity per Unit
+UnitPrice=Unit Price
+UnitsInStock=Number of Units in Stock
+Discontinued=Discontinued
