Passo 13.5 - Fix de erros

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -18,7 +18,7 @@ mailBody=How are you?
 
 # Product list
 productListTitle= Product List
-StockValue=Current Stock Value
+stockValue=Current Stock Value
 
 # Product Details
 ProductID=Product ID
