--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -18,7 +18,7 @@ mailBody=Como você está?
 
 # Product list
 productListTitle=Lista de produtos
-StockValue=Valor Atual do Estoque
+stockValue=Valor Atual do Estoque
 
 # Product Details
 ProductID=Product ID
