Passo 15 - Associação Associação de agregação por Factory Function

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -19,6 +19,7 @@ mailBody=How are you?
 # Product list
 productListTitle= Product List
 stockValue=Current Stock Value
+outOfStock=Nickt Stock
 
 # Product Details
 ProductID=Product ID
