--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -19,6 +19,7 @@ mailBody=Como você está?
 # Product list
 productListTitle=Lista de produtos
 stockValue=Valor Atual do Estoque
+outOfStock=Sem Estoque
 
 # Product Details
 ProductID=Product ID
