--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -19,6 +19,7 @@ mailBody=Wie geht es dir?
 # Product list
 productListTitle=Artikelliste
 stockValue=Lagerbestand Wert
+outOfStock=Out of Stock
 
 # Product Details
 ProductID=Produkt-ID
